Fixed Donate Btn on Mobile Screen

--- a/css/nav.css
+++ b/css/nav.css
@@ -93,6 +93,16 @@ nav a {
 	background-color: blueviolet;
 	border-radius: 3px;
 }
+/* Overriding */
+.button a {
+	background: #fff;
+	border: 0;
+	color: #000;
+	border-radius: 8px;
+}
+#don-btn > img {
+	padding-right: 8px;
+}
 
 /* Tablet Menu  */
 
@@ -118,12 +128,12 @@ nav a {
 		padding: 10px 15px;
 		margin: 5px 0;
 	}
-	.button a {
+	/* .button a {
 		background: #fff;
 		border: 0;
 		color: #000;
 		border-radius: 8px;
-	}
+	} */
 	.button.secondary {
 		border: 0;
 	}
@@ -144,9 +154,9 @@ nav a {
 		width: 100%;
 		height: 100%;
 	}
-	#don-btn > img {
+	/* #don-btn > img {
 		padding-right: 8px;
-	}
+	} */
 }
 
 /* Desktop Menu */
